parser.out


Unused terminals:

   VOID
   LONG
   ENUM
   ARROW
   DOUBLE
   EQ_TIMES
   CARET
   SHORT
   SIZEOF
   EQ_SHIFT_RIGHT
   DOUBLE_AMPERSAND
   UNSIGNED
   COLON
   UNION
   DOUBLE_PLUS
   SHIFT_LEFT
   DEFAULT
   EQ_CARET
   DOT
   CASE
   REGISTER
   PIPE
   SWITCH
   TILDE
   DOUBLE_PIPE
   EQ_DIV
   VOLATILE
   DO
   CONST
   EQ_PIPE
   EQ_AMPERSAND
   SIGNED
   GOTO
   EQ_SHIFT_LEFT
   DOUBLE_MINUS
   QUESTION
   TYPEDEF
   AUTO
   TIMES
   POUND
   STRUCT
   SHIFT_RIGHT
   FLOAT
   EQ_MODULO

Grammar

Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> type_specifier declarator compound_statement
Rule 6     function_definition -> STATIC type_specifier declarator compound_statement
Rule 7     declaration -> type_specifier declarator SEMICOLON
Rule 8     declaration -> EXTERN type_specifier declarator SEMICOLON
Rule 9     declaration_list_opt -> empty
Rule 10    declaration_list_opt -> declaration_list
Rule 11    declaration_list -> declaration
Rule 12    declaration_list -> declaration_list declaration
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> CHAR
Rule 15    declarator -> direct_declarator
Rule 16    declarator -> ASTERISK declarator
Rule 17    direct_declarator -> ID
Rule 18    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 19    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 20    parameter_type_list -> parameter_list
Rule 21    parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 22    parameter_list -> parameter_declaration
Rule 23    parameter_list -> parameter_list COMMA parameter_declaration
Rule 24    parameter_declaration -> type_specifier declarator
Rule 25    compound_statement -> LBRACE declaration_list_opt statement_list RBRACE
Rule 26    compound_statement -> LBRACE declaration_list_opt RBRACE
Rule 27    expression_statement -> expression SEMICOLON
Rule 28    expression -> equality_expression
Rule 29    expression -> equality_expression ASSIGN expression
Rule 30    expression -> equality_expression EQ_PLUS expression
Rule 31    expression -> equality_expression EQ_MINUS expression
Rule 32    equality_expression -> relational_expression
Rule 33    equality_expression -> equality_expression EQ relational_expression
Rule 34    equality_expression -> equality_expression NOT_EQ relational_expression
Rule 35    relational_expression -> additive_expression
Rule 36    relational_expression -> relational_expression LESS additive_expression
Rule 37    relational_expression -> relational_expression GREATER additive_expression
Rule 38    relational_expression -> relational_expression LESS_EQ additive_expression
Rule 39    relational_expression -> relational_expression GREATER_EQ additive_expression
Rule 40    postfix_expression -> primary_expression
Rule 41    postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 42    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 43    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 44    argument_expression_list -> expression
Rule 45    argument_expression_list -> argument_expression_list COMMA expression
Rule 46    unary_expression -> postfix_expression
Rule 47    unary_expression -> MINUS unary_expression
Rule 48    unary_expression -> EXCLAMATION unary_expression
Rule 49    unary_expression -> ASTERISK unary_expression
Rule 50    unary_expression -> AMPERSAND unary_expression
Rule 51    mult_expression -> unary_expression
Rule 52    mult_expression -> mult_expression ASTERISK unary_expression
Rule 53    mult_expression -> mult_expression DIV unary_expression
Rule 54    mult_expression -> mult_expression MODULO unary_expression
Rule 55    additive_expression -> mult_expression
Rule 56    additive_expression -> additive_expression PLUS mult_expression
Rule 57    additive_expression -> additive_expression MINUS mult_expression
Rule 58    primary_expression -> ID
Rule 59    primary_expression -> INUMBER
Rule 60    primary_expression -> FNUMBER
Rule 61    primary_expression -> CHARACTER
Rule 62    primary_expression -> string_literal
Rule 63    primary_expression -> LPAREN expression RPAREN
Rule 64    string_literal -> STRING
Rule 65    string_literal -> string_literal STRING
Rule 66    statement -> compound_statement
Rule 67    statement -> expression_statement
Rule 68    statement -> selection_statement
Rule 69    statement -> iteration_statement
Rule 70    statement -> jump_statement
Rule 71    jump_statement -> RETURN SEMICOLON
Rule 72    jump_statement -> RETURN expression SEMICOLON
Rule 73    jump_statement -> BREAK SEMICOLON
Rule 74    jump_statement -> CONTINUE SEMICOLON
Rule 75    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 76    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 77    selection_statement -> IF LPAREN expression RPAREN statement
Rule 78    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 79    statement_list -> statement
Rule 80    statement_list -> statement_list statement
Rule 81    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 50
ARROW                : 
ASSIGN               : 29
ASTERISK             : 16 49 52
AUTO                 : 
BREAK                : 73
CARET                : 
CASE                 : 
CHAR                 : 14
CHARACTER            : 61
COLON                : 
COMMA                : 21 23 45
CONST                : 
CONTINUE             : 74
DEFAULT              : 
DIV                  : 53
DO                   : 
DOT                  : 
DOUBLE               : 
DOUBLE_AMPERSAND     : 
DOUBLE_MINUS         : 
DOUBLE_PIPE          : 
DOUBLE_PLUS          : 
ELLIPSIS             : 21
ELSE                 : 78
ENUM                 : 
EQ                   : 33
EQ_AMPERSAND         : 
EQ_CARET             : 
EQ_DIV               : 
EQ_MINUS             : 31
EQ_MODULO            : 
EQ_PIPE              : 
EQ_PLUS              : 30
EQ_SHIFT_LEFT        : 
EQ_SHIFT_RIGHT       : 
EQ_TIMES             : 
EXCLAMATION          : 48
EXTERN               : 8
FLOAT                : 
FNUMBER              : 60
FOR                  : 76
GOTO                 : 
GREATER              : 37
GREATER_EQ           : 39
ID                   : 17 58
IF                   : 77 78
INT                  : 13
INUMBER              : 59
LBRACE               : 25 26
LBRACKET             : 43
LESS                 : 36
LESS_EQ              : 38
LONG                 : 
LPAREN               : 18 19 41 42 63 75 76 77 78
MINUS                : 47 57
MODULO               : 54
NOT_EQ               : 34
PIPE                 : 
PLUS                 : 56
POUND                : 
QUESTION             : 
RBRACE               : 25 26
RBRACKET             : 43
REGISTER             : 
RETURN               : 71 72
RPAREN               : 18 19 41 42 63 75 76 77 78
SEMICOLON            : 7 8 27 71 72 73 74
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 6
STRING               : 64 65
STRUCT               : 
SWITCH               : 
TILDE                : 
TIMES                : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 
VOLATILE             : 
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

additive_expression  : 35 36 37 38 39 56 57
argument_expression_list : 41 45
compound_statement   : 5 6 66
declaration          : 4 11 12
declaration_list     : 10 12
declaration_list_opt : 25 26
declarator           : 5 6 7 8 16 24
direct_declarator    : 15 18 19
empty                : 9
equality_expression  : 28 29 30 31 33 34
expression           : 27 29 30 31 43 44 45 63 72 75 76 77 78
expression_statement : 67 76 76
external_declaration : 1 2
function_definition  : 3
iteration_statement  : 69
jump_statement       : 70
mult_expression      : 52 53 54 55 56 57
parameter_declaration : 22 23
parameter_list       : 20 21 23
parameter_type_list  : 18
postfix_expression   : 41 42 43 46
primary_expression   : 40
relational_expression : 32 33 34 36 37 38 39
selection_statement  : 68
statement            : 75 76 77 78 78 79 80
statement_list       : 25 80
string_literal       : 62 65
translation_unit     : 2 0
type_specifier       : 5 6 7 8 24
unary_expression     : 47 48 49 50 51 52 53 54


Parsing method: SLR


state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier declarator compound_statement
    (6) function_definition -> . STATIC type_specifier declarator compound_statement
    (7) declaration -> . type_specifier declarator SEMICOLON
    (8) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    STATIC          shift and go to state 7
    EXTERN          shift and go to state 8
    INT             shift and go to state 3
    CHAR            shift and go to state 5


    external_declaration shift and go to state 1
    function_definition shift and go to state 2
    declaration     shift and go to state 4
    type_specifier  shift and go to state 6
    translation_unit shift and go to state 9

state 1

    (1) translation_unit -> external_declaration .

    $               reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)



state 2

    (3) external_declaration -> function_definition .

    $               reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)



state 3

    (13) type_specifier -> INT .

    ID              reduce using rule 13 (type_specifier -> INT .)
    ASTERISK        reduce using rule 13 (type_specifier -> INT .)



state 4

    (4) external_declaration -> declaration .

    $               reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    EXTERN          reduce using rule 4 (external_declaration -> declaration .)



state 5

    (14) type_specifier -> CHAR .

    ID              reduce using rule 14 (type_specifier -> CHAR .)
    ASTERISK        reduce using rule 14 (type_specifier -> CHAR .)



state 6

    (5) function_definition -> type_specifier . declarator compound_statement
    (7) declaration -> type_specifier . declarator SEMICOLON
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 12

state 7

    (6) function_definition -> STATIC . type_specifier declarator compound_statement
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    INT             shift and go to state 3
    CHAR            shift and go to state 5


    type_specifier  shift and go to state 14

state 8

    (8) declaration -> EXTERN . type_specifier declarator SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    INT             shift and go to state 3
    CHAR            shift and go to state 5


    type_specifier  shift and go to state 15

state 9

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier declarator compound_statement
    (6) function_definition -> . STATIC type_specifier declarator compound_statement
    (7) declaration -> . type_specifier declarator SEMICOLON
    (8) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    STATIC          shift and go to state 7
    EXTERN          shift and go to state 8
    INT             shift and go to state 3
    CHAR            shift and go to state 5


    external_declaration shift and go to state 16
    function_definition shift and go to state 2
    declaration     shift and go to state 4
    type_specifier  shift and go to state 6

state 10

    (15) declarator -> direct_declarator .
    (18) direct_declarator -> direct_declarator . LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> direct_declarator . LPAREN RPAREN

    LBRACE          reduce using rule 15 (declarator -> direct_declarator .)
    SEMICOLON       reduce using rule 15 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 15 (declarator -> direct_declarator .)
    COMMA           reduce using rule 15 (declarator -> direct_declarator .)
    LPAREN          shift and go to state 17

  ! LPAREN          [ shift and go to state 17 ]


state 11

    (16) declarator -> ASTERISK . declarator
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 18

state 12

    (5) function_definition -> type_specifier declarator . compound_statement
    (7) declaration -> type_specifier declarator . SEMICOLON
    (25) compound_statement -> . LBRACE declaration_list_opt statement_list RBRACE
    (26) compound_statement -> . LBRACE declaration_list_opt RBRACE

    SEMICOLON       shift and go to state 19
    LBRACE          shift and go to state 21

  ! LBRACE          [ shift and go to state 21 ]

    compound_statement shift and go to state 20

state 13

    (17) direct_declarator -> ID .

    LBRACE          reduce using rule 17 (direct_declarator -> ID .)
    SEMICOLON       reduce using rule 17 (direct_declarator -> ID .)
    LPAREN          reduce using rule 17 (direct_declarator -> ID .)
    RPAREN          reduce using rule 17 (direct_declarator -> ID .)
    COMMA           reduce using rule 17 (direct_declarator -> ID .)



state 14

    (6) function_definition -> STATIC type_specifier . declarator compound_statement
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 22

state 15

    (8) declaration -> EXTERN type_specifier . declarator SEMICOLON
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 23

state 16

    (2) translation_unit -> translation_unit external_declaration .

    $               reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    STATIC          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    EXTERN          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)



state 17

    (18) direct_declarator -> direct_declarator LPAREN . parameter_type_list RPAREN
    (19) direct_declarator -> direct_declarator LPAREN . RPAREN
    (20) parameter_type_list -> . parameter_list
    (21) parameter_type_list -> . parameter_list COMMA ELLIPSIS
    (22) parameter_list -> . parameter_declaration
    (23) parameter_list -> . parameter_list COMMA parameter_declaration
    (24) parameter_declaration -> . type_specifier declarator
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    RPAREN          shift and go to state 25
    INT             shift and go to state 3
    CHAR            shift and go to state 5


    type_specifier  shift and go to state 24
    parameter_list  shift and go to state 26
    parameter_type_list shift and go to state 27
    parameter_declaration shift and go to state 28

state 18

    (16) declarator -> ASTERISK declarator .

    LBRACE          reduce using rule 16 (declarator -> ASTERISK declarator .)
    SEMICOLON       reduce using rule 16 (declarator -> ASTERISK declarator .)
    RPAREN          reduce using rule 16 (declarator -> ASTERISK declarator .)
    COMMA           reduce using rule 16 (declarator -> ASTERISK declarator .)



state 19

    (7) declaration -> type_specifier declarator SEMICOLON .

    $               reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    INT             reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    CHAR            reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    STATIC          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    EXTERN          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    LBRACE          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    IF              reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    WHILE           reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    FOR             reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    RETURN          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    BREAK           reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    CONTINUE        reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    MINUS           reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    EXCLAMATION     reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    ASTERISK        reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    AMPERSAND       reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    ID              reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    INUMBER         reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    FNUMBER         reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    CHARACTER       reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    STRING          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    LPAREN          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)
    RBRACE          reduce using rule 7 (declaration -> type_specifier declarator SEMICOLON .)



state 20

    (5) function_definition -> type_specifier declarator compound_statement .

    $               reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    INT             reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    CHAR            reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    STATIC          reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    EXTERN          reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)



state 21

    (25) compound_statement -> LBRACE . declaration_list_opt statement_list RBRACE
    (26) compound_statement -> LBRACE . declaration_list_opt RBRACE
    (9) declaration_list_opt -> . empty
    (10) declaration_list_opt -> . declaration_list
    (81) empty -> .
    (11) declaration_list -> . declaration
    (12) declaration_list -> . declaration_list declaration
    (7) declaration -> . type_specifier declarator SEMICOLON
    (8) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    LBRACE          reduce using rule 81 (empty -> .)
    IF              reduce using rule 81 (empty -> .)
    WHILE           reduce using rule 81 (empty -> .)
    FOR             reduce using rule 81 (empty -> .)
    RETURN          reduce using rule 81 (empty -> .)
    BREAK           reduce using rule 81 (empty -> .)
    CONTINUE        reduce using rule 81 (empty -> .)
    MINUS           reduce using rule 81 (empty -> .)
    EXCLAMATION     reduce using rule 81 (empty -> .)
    ASTERISK        reduce using rule 81 (empty -> .)
    AMPERSAND       reduce using rule 81 (empty -> .)
    ID              reduce using rule 81 (empty -> .)
    INUMBER         reduce using rule 81 (empty -> .)
    FNUMBER         reduce using rule 81 (empty -> .)
    CHARACTER       reduce using rule 81 (empty -> .)
    STRING          reduce using rule 81 (empty -> .)
    LPAREN          reduce using rule 81 (empty -> .)
    RBRACE          reduce using rule 81 (empty -> .)
    EXTERN          shift and go to state 8
    INT             shift and go to state 3
    CHAR            shift and go to state 5


    declaration_list_opt shift and go to state 29
    type_specifier  shift and go to state 31
    declaration_list shift and go to state 30
    declaration     shift and go to state 32
    empty           shift and go to state 33

state 22

    (6) function_definition -> STATIC type_specifier declarator . compound_statement
    (25) compound_statement -> . LBRACE declaration_list_opt statement_list RBRACE
    (26) compound_statement -> . LBRACE declaration_list_opt RBRACE

    LBRACE          shift and go to state 21

  ! LBRACE          [ shift and go to state 21 ]

    compound_statement shift and go to state 34

state 23

    (8) declaration -> EXTERN type_specifier declarator . SEMICOLON

    SEMICOLON       shift and go to state 35



state 24

    (24) parameter_declaration -> type_specifier . declarator
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 36

state 25

    (19) direct_declarator -> direct_declarator LPAREN RPAREN .

    LBRACE          reduce using rule 19 (direct_declarator -> direct_declarator LPAREN RPAREN .)
    SEMICOLON       reduce using rule 19 (direct_declarator -> direct_declarator LPAREN RPAREN .)
    LPAREN          reduce using rule 19 (direct_declarator -> direct_declarator LPAREN RPAREN .)
    RPAREN          reduce using rule 19 (direct_declarator -> direct_declarator LPAREN RPAREN .)
    COMMA           reduce using rule 19 (direct_declarator -> direct_declarator LPAREN RPAREN .)



state 26

    (20) parameter_type_list -> parameter_list .
    (21) parameter_type_list -> parameter_list . COMMA ELLIPSIS
    (23) parameter_list -> parameter_list . COMMA parameter_declaration

    RPAREN          reduce using rule 20 (parameter_type_list -> parameter_list .)
    COMMA           shift and go to state 37

  ! COMMA           [ shift and go to state 37 ]


state 27

    (18) direct_declarator -> direct_declarator LPAREN parameter_type_list . RPAREN

    RPAREN          shift and go to state 38



state 28

    (22) parameter_list -> parameter_declaration .

    RPAREN          reduce using rule 22 (parameter_list -> parameter_declaration .)
    COMMA           reduce using rule 22 (parameter_list -> parameter_declaration .)



state 29

    (25) compound_statement -> LBRACE declaration_list_opt . statement_list RBRACE
    (26) compound_statement -> LBRACE declaration_list_opt . RBRACE
    (79) statement_list -> . statement
    (80) statement_list -> . statement_list statement
    (66) statement -> . compound_statement
    (67) statement -> . expression_statement
    (68) statement -> . selection_statement
    (69) statement -> . iteration_statement
    (70) statement -> . jump_statement
    (25) compound_statement -> . LBRACE declaration_list_opt statement_list RBRACE
    (26) compound_statement -> . LBRACE declaration_list_opt RBRACE
    (27) expression_statement -> . expression SEMICOLON
    (77) selection_statement -> . IF LPAREN expression RPAREN statement
    (78) selection_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (75) iteration_statement -> . WHILE LPAREN expression RPAREN statement
    (76) iteration_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (71) jump_statement -> . RETURN SEMICOLON
    (72) jump_statement -> . RETURN expression SEMICOLON
    (73) jump_statement -> . BREAK SEMICOLON
    (74) jump_statement -> . CONTINUE SEMICOLON
    (28) expression -> . equality_expression
    (29) expression -> . equality_expression ASSIGN expression
    (30) expression -> . equality_expression EQ_PLUS expression
    (31) expression -> . equality_expression EQ_MINUS expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression EQ relational_expression
    (34) equality_expression -> . equality_expression NOT_EQ relational_expression
    (35) relational_expression -> . additive_expression
    (36) relational_expression -> . relational_expression LESS additive_expression
    (37) relational_expression -> . relational_expression GREATER additive_expression
    (38) relational_expression -> . relational_expression LESS_EQ additive_expression
    (39) relational_expression -> . relational_expression GREATER_EQ additive_expression
    (55) additive_expression -> . mult_expression
    (56) additive_expression -> . additive_expression PLUS mult_expression
    (57) additive_expression -> . additive_expression MINUS mult_expression
    (51) mult_expression -> . unary_expression
    (52) mult_expression -> . mult_expression ASTERISK unary_expression
    (53) mult_expression -> . mult_expression DIV unary_expression
    (54) mult_expression -> . mult_expression MODULO unary_expression
    (46) unary_expression -> . postfix_expression
    (47) unary_expression -> . MINUS unary_expression
    (48) unary_expression -> . EXCLAMATION unary_expression
    (49) unary_expression -> . ASTERISK unary_expression
    (50) unary_expression -> . AMPERSAND unary_expression
    (40) postfix_expression -> . primary_expression
    (41) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (42) postfix_expression -> . postfix_expression LPAREN RPAREN
    (43) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (58) primary_expression -> . ID
    (59) primary_expression -> . INUMBER
    (60) primary_expression -> . FNUMBER
    (61) primary_expression -> . CHARACTER
    (62) primary_expression -> . string_literal
    (63) primary_expression -> . LPAREN expression RPAREN
    (64) string_literal -> . STRING
    (65) string_literal -> . string_literal STRING

    RBRACE          shift and go to state 55
    LBRACE          shift and go to state 21
    IF              shift and go to state 64
    WHILE           shift and go to state 44
    FOR             shift and go to state 56
    RETURN          shift and go to state 41
    BREAK           shift and go to state 68
    CONTINUE        shift and go to state 69
    MINUS           shift and go to state 47
    EXCLAMATION     shift and go to state 40
    ASTERISK        shift and go to state 57
    AMPERSAND       shift and go to state 59
    ID              shift and go to state 62
    INUMBER         shift and go to state 67
    FNUMBER         shift and go to state 66
    CHARACTER       shift and go to state 43
    LPAREN          shift and go to state 61
    STRING          shift and go to state 45

  ! LBRACE          [ shift and go to state 21 ]
  ! IF              [ shift and go to state 64 ]
  ! RETURN          [ shift and go to state 41 ]

    expression_statement shift and go to state 39
    string_literal  shift and go to state 49
    unary_expression shift and go to state 42
    compound_statement shift and go to state 50
    expression      shift and go to state 71
    selection_statement shift and go to state 51
    postfix_expression shift and go to state 52
    mult_expression shift and go to state 58
    additive_expression shift and go to state 48
    jump_statement  shift and go to state 65
    statement       shift and go to state 54
    statement_list  shift and go to state 70
    iteration_statement shift and go to state 46
    primary_expression shift and go to state 60
    equality_expression shift and go to state 63
    relational_expression shift and go to state 53

state 30

    (10) declaration_list_opt -> declaration_list .
    (12) declaration_list -> declaration_list . declaration
    (7) declaration -> . type_specifier declarator SEMICOLON
    (8) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . CHAR

    LBRACE          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    IF              reduce using rule 10 (declaration_list_opt -> declaration_list .)
    WHILE           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    FOR             reduce using rule 10 (declaration_list_opt -> declaration_list .)
    RETURN          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    BREAK           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    CONTINUE        reduce using rule 10 (declaration_list_opt -> declaration_list .)
    MINUS           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    EXCLAMATION     reduce using rule 10 (declaration_list_opt -> declaration_list .)
    ASTERISK        reduce using rule 10 (declaration_list_opt -> declaration_list .)
    AMPERSAND       reduce using rule 10 (declaration_list_opt -> declaration_list .)
    ID              reduce using rule 10 (declaration_list_opt -> declaration_list .)
    INUMBER         reduce using rule 10 (declaration_list_opt -> declaration_list .)
    FNUMBER         reduce using rule 10 (declaration_list_opt -> declaration_list .)
    CHARACTER       reduce using rule 10 (declaration_list_opt -> declaration_list .)
    STRING          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    LPAREN          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    RBRACE          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    EXTERN          shift and go to state 8
    INT             shift and go to state 3
    CHAR            shift and go to state 5


    declaration     shift and go to state 72
    type_specifier  shift and go to state 31

state 31

    (7) declaration -> type_specifier . declarator SEMICOLON
    (15) declarator -> . direct_declarator
    (16) declarator -> . ASTERISK declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (19) direct_declarator -> . direct_declarator LPAREN RPAREN

    ASTERISK        shift and go to state 11
    ID              shift and go to state 13


    direct_declarator shift and go to state 10
    declarator      shift and go to state 73

state 32

    (11) declaration_list -> declaration .

    INT             reduce using rule 11 (declaration_list -> declaration .)
    CHAR            reduce using rule 11 (declaration_list -> declaration .)
    EXTERN          reduce using rule 11 (declaration_list -> declaration .)
    LBRACE          reduce using rule 11 (declaration_list -> declaration .)
    IF              reduce using rule 11 (declaration_list -> declaration .)
    WHILE           reduce using rule 11 (declaration_list -> declaration .)
    FOR             reduce using rule 11 (declaration_list -> declaration .)
    RETURN          reduce using rule 11 (declaration_list -> declaration .)
    BREAK           reduce using rule 11 (declaration_list -> declaration .)
    CONTINUE        reduce using rule 11 (declaration_list -> declaration .)
    MINUS           reduce using rule 11 (declaration_list -> declaration .)
    EXCLAMATION     reduce using rule 11 (declaration_list -> declaration .)
    ASTERISK        reduce using rule 11 (declaration_list -> declaration .)
    AMPERSAND       reduce using rule 11 (declaration_list -> declaration .)
    ID              reduce using rule 11 (declaration_list -> declaration .)
    INUMBER         reduce using rule 11 (declaration_list -> declaration .)
    FNUMBER         reduce using rule 11 (declaration_list -> declaration .)
    CHARACTER       reduce using rule 11 (declaration_list -> declaration .)
    STRING          reduce using rule 11 (declaration_list -> declaration .)
    LPAREN          reduce using rule 11 (declaration_list -> declaration .)
    RBRACE          reduce using rule 11 (declaration_list -> declaration .)



state 33

    (9) declaration_list_opt -> empty .

    LBRACE          reduce using rule 9 (declaration_list_opt -> empty .)
    IF              reduce using rule 9 (declaration_list_opt -> empty .)
    WHILE           reduce using rule 9 (declaration_list_opt -> empty .)
    FOR             reduce using rule 9 (declaration_list_opt -> empty .)
    RETURN          reduce using rule 9 (declaration_list_opt -> empty .)
    BREAK           reduce using rule 9 (declaration_list_opt -> empty .)
    CONTINUE        reduce using rule 9 (declaration_list_opt -> empty .)
    MINUS           reduce using rule 9 (declaration_list_opt -> empty .)
    EXCLAMATION     reduce using rule 9 (declaration_list_opt -> empty .)
    ASTERISK        reduce using rule 9 (declaration_list_opt -> empty .)
    AMPERSAND       reduce using rule 9 (declaration_list_opt -> empty .)
    ID              reduce using rule 9 (declaration_list_opt -> empty .)
    INUMBER         reduce using rule 9 (declaration_list_opt -> empty .)
    FNUMBER         reduce using rule 9 (declaration_list_opt -> empty .)
    CHARACTER       reduce using rule 9 (declaration_list_opt -> empty .)
    STRING          reduce using rule 9 (declaration_list_opt -> empty .)
    LPAREN          reduce using rule 9 (declaration_list_opt -> empty .)
    RBRACE          reduce using rule 9 (declaration_list_opt -> empty .)



state 34

    (6) function_definition -> STATIC type_specifier declarator compound_statement .

